--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 
     <groupId>com.backyardev</groupId>
     <artifactId>reactive-databse</artifactId>
-    <version>0.0.1</version>
+    <version>0.1.0</version>
     <name>reactive-database</name>
 
     <properties>
@@ -91,12 +91,6 @@
 
 
         <dependency>
-            <groupId>io.r2dbc</groupId>
-            <artifactId>r2dbc-mssql</artifactId>
-            <version>1.0.2.RELEASE</version>
-        </dependency>
-
-        <dependency>
             <groupId>joda-time</groupId>
             <artifactId>joda-time</artifactId>
             <version>2.13.0</version>
@@ -124,6 +118,11 @@
                         </exclude>
                     </excludes>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>com.github.ulisesbocchio</groupId>
+                <artifactId>jasypt-maven-plugin</artifactId>
+                <version>3.0.3</version>
             </plugin>
         </plugins>
     </build>
